@startuml

package com.example.mistareas2 {

    class MainActivity {
        - FirebaseFirestore firebaseDB
        - SQLiteHelper sqliteHelper
        - TaskDao taskDao
        - List<Task> taskList
        - TaskAdapter taskAdapter
        - boolean showingPendingTasks
        - ExecutorService executorService
        + onCreate(Bundle)
        + loadTasks()
        + addNewTask()
        + deleteTask(Task task)
        + markTaskAsDone(Task task)
    }

    class TaskRegistrationActivity {
        - FirebaseFirestore firebaseDB
        + onCreate(Bundle)
        + registerTask()
    }

    class TaskDetailsActivity {
        - FirebaseFirestore firebaseDB
        + onCreate(Bundle)
        + loadTaskDetails(String taskId)
    }

    class SettingsActivity {
        - SharedPreferences sharedPreferences
        + onCreate(Bundle)
    }

    class TaskAdapter {
        - List<Task> taskList
        + onCreateViewHolder()
        + onBindViewHolder()
        + getItemCount()
    }

    class SQLiteHelper {
        - static SQLiteHelper instance
        + getInstance(Context context)
    }

    class TaskDao {
        + addTask(Task task)
        + updateTask(Task task)
        + deleteTask(Task task)
        + getTasks(boolean isCompleted)
    }

    class Task {
        - String id
        - String name
        - String description
        - String date
        - String priority
        - double cost
        - boolean isCompleted
        + getId()
        + getName()
        + getDescription()
        + getDate()
        + getPriority()
        + getCost()
        + isCompleted()
    }
}

MainActivity --> TaskRegistrationActivity : "Open"
MainActivity --> TaskDetailsActivity : "Open"
MainActivity --> SettingsActivity : "Open"
MainActivity --> TaskAdapter : "Displays list using"
MainActivity --> TaskDao : "CRUD operations"
MainActivity --> SQLiteHelper : "Database helper"
TaskRegistrationActivity --> Task : "Creates"
TaskDetailsActivity --> Task : "Displays"
TaskDao --> Task : "CRUD operations on"
SQLiteHelper --> TaskDao : "Provides"

@enduml
